--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@types/react-router-dom": "5.3.3",
     "axios": "0.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
